1. 优化 test util, 去掉 @slf4j 注解和日志打印 2. 完成 PersistSnapMeta 节点